# swagger-ui/swagger.json
@@ -1,6 +1,89 @@
 {
   "swagger": "2.0",
   "paths": {
+    "/api/v1/topic": {
+      "post": {
+        "description": "Constructs and persists a new Topic based on the provided parameters",
+        "tags": [
+          "topic"
+        ],
+        "operationId": "newTopic",
+        "parameters": [
+          {
+            "uniqueItems": true,
+            "x-go-name": "Name",
+            "description": "the name of the new topic",
+            "name": "name",
+            "in": "body",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/models.Topic"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
+    "/api/v1/topic/{id}": {
+      "get": {
+        "tags": [
+          "topic"
+        ],
+        "summary": "Gets info for a topic.",
+        "operationId": "getTopic",
+        "parameters": [
+          {
+            "uniqueItems": true,
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "ID",
+            "description": "the ID of the topic",
+            "name": "id",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/models.Topic"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
+    "/api/v1/topic_like/{part}": {
+      "get": {
+        "description": "Gets topics similar to the given string",
+        "tags": [
+          "topic"
+        ],
+        "operationId": "getTopicsLike",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Part",
+            "description": "string to search for similar topics",
+            "name": "part",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/models.Topic"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
     "/api/v1/user": {
       "post": {
         "tags": [
